<resources>
    <string name="app_name">Application Maintenance Name</string>
    <string name="add_member">Add Member</string>
    <string name="delete_member">Delete Member</string>
    <string name="update_member">Update Member</string>
    <string name="name">Name</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="enter_name">Enter name...</string>
    <string name="enter_telephone_number">Enter Telephone Number...</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>